@@ -5,6 +5,8 @@
 	- auth zone http download stores exact copy of downloaded file,
 	  including comments in the file.
 	- Fix sldns parse failure for CDS alternate delete syntax empty hex.
+	- Attempt for auth zone fix; add of callback in mesh gets from
+	  callback does not skip callback of result.
 
 20 April 2018: Wouter
 	- man page documentation for dns-over-tls forward-addr '#' notation.
